--- a/README.adoc
+++ b/README.adoc
@@ -113,7 +113,7 @@ This will result in an problem detail body like this:
 
 One of the most common use-cases for Bad Requests is a failing validation. You can do a verification and throw a corresponding problem detail exception simply by calling `ValidationFailedException.validate(object)`.
 
-The Spring Boot RI currently also converts the exception thrown when a parameter to a REST boundary method is annotated as `@Valid`. The JAX-RS RI currently can't due to technical restrictions.
+The Spring Boot RI also converts the exception thrown when a parameter to a REST boundary method is annotated as `@Valid`. The JAX-RS RI currently can't due to technical restrictions.
 
 == Client Side Examples
 
