--- a/ri/README.adoc
+++ b/ri/README.adoc
@@ -1,17 +1,11 @@
-= Problem Details Dummy Implementation for JAX-RS
+= Problem Details Implementation for JAX-RS
 
-This is a JAX-RS dummy implementation for the Problem Details API. It's just a dummy, because:
+This is a JAX-RS proof-of-concept implementation for the Problem Details API. Limitations:
 
 a. it's not built into the container, you'll have to package it into your applications, which means they are not a thin war any more.
 
-b. it doesn't handle `@Valid` annotated parameters and other exceptions that the container produces.
+b. the exceptions on the client side have to be registered manually (e.g., `ProblemDetailJsonToExceptionBuilder.register(OutOfCreditException.class);`) and are then wrapped in a ResponseProcessingException.
 
-c. the exceptions on the client side are wrapped in a ResponseProcessingException.
+== Architecture
 
-It implements an `ExceptionMapper` for the server side and a `ClientResponseFilter` for the client.
-
-== Client
-
-`ProblemDetailJsonToExceptionBuilder.register(OutOfCreditException.class);`
-
-`...target().register(ProblemDetailHandler.class)` (this would be registered globally in a full implementation)
+The architecture decisions are documented in our link:doc/adr/toc.md[ADR]s.
